--- a/src/pages/tk-products-list/tk-products-list.html
+++ b/src/pages/tk-products-list/tk-products-list.html
@@ -95,12 +95,12 @@
           <form [formGroup]="inputForm">
             <div [formGroupName]="j">
               <div class="competitive-section">
-                <p class="title">Competitive Products</p>
+                <p class="title">Capture Price</p>
                 <!-- <ion-row formGroupName="tkProduct"> -->
                 <ion-row>
                   <ion-col col-6>
                     <ion-label>
-                      {{ product['Product Name'] }}
+                      [TK] {{ product['Product Name'] }}
                     </ion-label>
                   </ion-col>
                   <ion-col col-3>
