--- a/src/pages/tk-products-list/tk-products-list.html
+++ b/src/pages/tk-products-list/tk-products-list.html
@@ -23,7 +23,9 @@
 <ion-content class="tk-product-container">
   <ion-searchbar (ionInput)="searchItems($event)"></ion-searchbar>
   <!-- <ion-list [virtualScroll]="tkProductArray" [approxItemHeight]="'250px'" no-lines #row> -->
-    <ion-list *ngFor="let product of tkProductArray; let j = index;" no-lines>
+  <!-- <form [formGroup]="inputForm"> -->
+  <virtual-scroller #scroll [items]="tkProductArray">
+    <ion-list *ngFor="let product of scroll.viewPortItems; let j = index;" no-lines>
       <!-- <div class="tk-item-wrapper" *virtualItem="let product;let j = index" text-wrap> -->
       <div class="tk-item-wrapper" text-wrap>
         <ion-grid
@@ -92,11 +94,9 @@
             </ion-row> -->
 
           <!-- Competitive Section Begins -->
-          <form [formGroup]="inputForm">
-            <div [formGroupName]="j">
+          <!-- <div [formGroupName]="j">
               <div class="competitive-section">
                 <p class="title">Competitive Products</p>
-                <!-- <ion-row formGroupName="tkProduct"> -->
                 <ion-row>
                   <ion-col col-6>
                     <ion-label>
@@ -132,17 +132,65 @@
                   </ion-col>
                 </ion-row>
               </div>
-              <!-- Competitive Section Ends -->
 
               <div class="item-action-wrapper">
-                <button ion-button small color="secondary" class="cust-btn" [disabled]="tkProductArray.length > 0 ? inputForm.controls[j].invalid : true" (click)="saveToServer(j)">Upload</button>
+                <button ion-button small color="secondary" class="cust-btn"
+                  [disabled]="tkProductArray.length > 0 ? inputForm.controls[j].invalid : true"
+                  (click)="saveToServer(j)">Upload</button>
+                <button ion-button small color="secondary" class="cust-btn"
+                  (click)="openAddCompetitiveProductModal(product['Master Code'])">Add New</button>
+              </div>
+            </div> -->
+          <form #form="ngForm">
+            <div>
+              <div class="competitive-section">
+                <p class="title">Competitive Products</p>
+                <ion-row>
+                  <ion-col col-6>
+                    <ion-label>
+                      {{ product['Product Name'] }}
+                    </ion-label>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="text" name="A" placeholder="MSQ" ngModel required></ion-input>
+                    </ion-item>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="number" name="B" placeholder="RRP"  ngModel required></ion-input>
+                    </ion-item>
+                  </ion-col>
+                </ion-row>
+                <ion-row *ngFor="let item of product['Competitive Product']; let i = index;">
+                  <ion-col col-6>
+                    <ion-label>
+                      {{ item['Product Name'] }}
+                    </ion-label>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="text" [name]="i + 'A'" placeholder="MSQ"  ngModel required></ion-input>
+                    </ion-item>
+                  </ion-col>
+                  <ion-col col-3>
+                    <ion-item>
+                      <ion-input type="number" [name]="i + 'B'" placeholder="RRP"  ngModel required></ion-input>
+                    </ion-item>
+                  </ion-col>
+                </ion-row>
+              </div>
+
+              <div class="item-action-wrapper">
+                <button ion-button small color="secondary" class="cust-btn" [disabled]="form.invalid" (click)="saveToServer(product['Master Code'], product['Product Code'], product['Product Catagory'], form)">Upload</button>
                 <button ion-button small color="secondary" class="cust-btn"
                   (click)="openAddCompetitiveProductModal(product['Master Code'])">Add New</button>
               </div>
             </div>
           </form>
-
         </ion-grid>
       </div>
     </ion-list>
+  </virtual-scroller>
+  <!-- </form> -->
 </ion-content>
