--- a/src/pages/price-capturing-category-list/price-capturing-category-list.html
+++ b/src/pages/price-capturing-category-list/price-capturing-category-list.html
@@ -21,9 +21,9 @@
 <div class="search-spinner">
   <ion-spinner name="crescent" *ngIf="!categoryListAvailable"></ion-spinner>
 </div>
-<ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
+<!-- <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
   <ion-refresher-content></ion-refresher-content>
-</ion-refresher>
+</ion-refresher> -->
 <ion-list *ngIf="categoryListAvailable && (parentCategoryList.length > 0)">
   <ion-item *ngFor="let category of parentCategoryList" (click)="getChildCategory(category)">
       <img src="assets/imgs/productcategory.svg">{{category.name}}
@@ -35,7 +35,7 @@
     <h4>No record found</h4>
   </ion-card-header>
 </ion-card>
-<ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+<!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
   <ion-infinite-scroll-content></ion-infinite-scroll-content>
-</ion-infinite-scroll>
+</ion-infinite-scroll> -->
 </ion-content>
