--- a/src/pages/price-capturing-product-list/price-capturing-product-list.html
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.html
@@ -20,23 +20,25 @@
       <img src="assets/imgs/productcategory.svg"> {{product['Product Name']}}
       <button ion-button clear color="secondary" item-end><ion-icon name="arrow-forward"></ion-icon></button>
     </ion-item> -->
-    <ion-row *ngFor="let product of productList" (click)="getProducts(product)">
-      <ion-col col-6>
-        <ion-label>
-          {{ product['Product Name'] }}
-        </ion-label>
-      </ion-col>
-      <ion-col col-3>
-        <ion-item>
-          <ion-input type="text" name="A" placeholder="MSQ" ngModel required></ion-input>
-        </ion-item>
-      </ion-col>
-      <ion-col col-3>
-        <ion-item>
-          <ion-input type="number" name="B" placeholder="RRP"  ngModel required></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+    <form #form="ngForm">
+      <ion-row *ngFor="let product of productList; let i = index;" (click)="getProducts(product)">
+        <ion-col col-6>
+          <ion-label>
+            {{ product['Product Name'] }}
+          </ion-label>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <ion-input type="text" [name]="i + 'A'" placeholder="MSQ" ngModel required></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col col-3>
+          <ion-item>
+            <ion-input type="number" [name]="i + 'B'" placeholder="RRP" ngModel required></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </form>
   </ion-list>
   <ion-card *ngIf="productListAvailable && (productList.length < 1)">
     <ion-card-header text-center>
