--- a/src/pages/price-capturing-product-list/price-capturing-product-list.html
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.html
@@ -21,7 +21,7 @@
       <button ion-button clear color="secondary" item-end><ion-icon name="arrow-forward"></ion-icon></button>
     </ion-item> -->
     <form #form="ngForm">
-      <ion-row *ngFor="let product of productList; let i = index;" (click)="getProducts(product)">
+      <ion-row *ngFor="let product of productList; let i = index;">
         <ion-col col-6>
           <ion-label>
             {{ product['Product Name'] }}
