--- a/src/pages/price-capturing-product-list/price-capturing-product-list.html
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.html
@@ -2,6 +2,7 @@
   <ion-navbar>
     <ion-title>{{unitSize}}</ion-title>
   </ion-navbar>
+  <ion-searchbar></ion-searchbar>
   <!-- <ion-toolbar>
     <form (ngSubmit)="submitSearch($event)">
       <ion-searchbar (ionInput)="getItems($event)" placeholder="Search any product in {{categoryObj.name}}"></ion-searchbar>
@@ -15,6 +16,13 @@
   <!-- <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher> -->
+  <ion-card>
+    <ion-card-header text-center>
+      <img src="../../assets/icon/empty-box.svg" alt="">
+      <h4>No record found</h4>
+    </ion-card-header>
+  </ion-card>
+
   <ion-list *ngIf="productListAvailable && (productList.length > 0)">
     <!-- <ion-item *ngFor="let product of productList" (click)="getProducts(product)">
       <img src="assets/imgs/productcategory.svg"> {{product['Product Name']}}
@@ -23,7 +31,7 @@
     <form #form="ngForm">
       <ion-row *ngFor="let product of productList; let i = index;">
         <ion-col col-6>
-          <ion-label>
+          <ion-label text-wrap>
             {{ product['Product Name'] }}
           </ion-label>
         </ion-col>
