--- a/src/pages/price-capturing-product-list/price-capturing-product-list.html
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.html
@@ -16,12 +16,6 @@
   <!-- <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher> -->
-  <ion-card>
-    <ion-card-header text-center>
-      <img src="../../assets/icon/empty-box.svg" alt="">
-      <h4>No record found</h4>
-    </ion-card-header>
-  </ion-card>
 
   <ion-list *ngIf="productListAvailable && (productList.length > 0)">
     <!-- <ion-item *ngFor="let product of productList" (click)="getProducts(product)">
@@ -48,8 +42,9 @@
       </ion-row>
     </form>
   </ion-list>
-  <ion-card *ngIf="productListAvailable && (productList.length < 1)">
+  <ion-card class="empty-state" *ngIf="productListAvailable && (productList.length < 1)">
     <ion-card-header text-center>
+      <img src="../../assets/icon/empty-box.svg" alt="">
       <h4>No record found</h4>
     </ion-card-header>
   </ion-card>
