--- a/src/pages/price-capturing-product-list/price-capturing-product-list.html
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.html
@@ -2,7 +2,7 @@
   <ion-navbar>
     <ion-title>{{unitSize}}</ion-title>
   </ion-navbar>
-  <ion-searchbar></ion-searchbar>
+  <!-- <ion-searchbar (ionInput)="searchItems($event)"></ion-searchbar> -->
   <!-- <ion-toolbar>
     <form (ngSubmit)="submitSearch($event)">
       <ion-searchbar (ionInput)="getItems($event)" placeholder="Search any product in {{categoryObj.name}}"></ion-searchbar>
