--- a/src/pages/add-customer-info/add-customer-info.html
+++ b/src/pages/add-customer-info/add-customer-info.html
@@ -13,6 +13,11 @@
         <ion-label floating>Shop Name</ion-label>
         <ion-input formControlName="shopName" type="text"></ion-input>
       </ion-item>
+
+      <ion-item>
+        <ion-label floating>Mobile Number</ion-label>
+        <ion-input formControlName="mobile" type="number"></ion-input>
+      </ion-item>
       
       <ion-item>
         <ion-label floating>Province</ion-label>
