fix label issues

--- a/src/pages/price-capturing-product-list/price-capturing-product-list.html
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.html
@@ -31,7 +31,7 @@
         </ion-col>
         <ion-col col-3>
           <ion-item>
-            <ion-input type="text" [name]="i + 'A'" placeholder="MSQ" ngModel required></ion-input>
+            <ion-input type="number" [name]="i + 'A'" placeholder="MSQ" ngModel required></ion-input>
           </ion-item>
         </ion-col>
         <ion-col col-3>
