--- a/src/pages/price-capturing-product-list/price-capturing-product-list.html
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.html
@@ -26,7 +26,7 @@
       <ion-row *ngFor="let product of productList; let i = index;">
         <ion-col col-6>
           <ion-label text-wrap>
-            {{ product['Product Name'] }}
+            {{ product.productName }}
           </ion-label>
         </ion-col>
         <ion-col col-3>
