fix netweight decimal issue

--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -49,7 +49,7 @@
         <ion-row *ngIf="product.tkPoint">
           <ion-col text-center>
             <ion-icon name="cog" color="grey"></ion-icon>
-            Net Weight: <span>{{product.netWeight.toFixed(2)}} Kg</span>
+            Net Weight: <span>{{product.netWeight | number: '.2-2'}} Kg</span>
           </ion-col>
         </ion-row>
         <div *ngIf="loggedInUserStore.length">
