--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -63,7 +63,7 @@
         <ion-row>
           <ion-col col-12 text-center>
             <ion-icon color="grey" name="cog"></ion-icon>
-            Total Net Weight: <strong text-uppercase>{{order.totalNetWeight}} tonnage</strong>
+            Total Net Weight: <strong text-uppercase>{{order.totalNetWeight | number: '.2-2'}} tonnage</strong>
           </ion-col>
         </ion-row>
           <ion-row>
