--- a/src/pages/customer-list-product/customer-list-product.html
+++ b/src/pages/customer-list-product/customer-list-product.html
@@ -60,7 +60,7 @@
           <ion-row *ngIf="product.netWeight">
             <ion-col text-center>
               <ion-icon name="cog" color="grey"></ion-icon>
-              Net Weight: <span>{{product.netWeight.toFixed(2)}} Kg</span>
+              Net Weight: <span>{{product.netWeight | number: '.2-2'}} Kg</span>
             </ion-col>
           </ion-row>
 
