--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -43,7 +43,7 @@
               <ion-icon name="trophy" color="grey"></ion-icon> <span>Total Tk-Points: {{orderDetail.totalTkPoints}}</span>
             </ion-col> -->
             <ion-col col-12 text-center>
-              <ion-icon name="cog" color="grey"></ion-icon> <span>Total Net Weight: {{orderDetail.totalNetWeight}} tonnage</span>
+              <ion-icon name="cog" color="grey"></ion-icon> <span>Total Net Weight: {{orderDetail.totalNetWeight | number: '.2-2'}} tonnage</span>
             </ion-col>
           </ion-row>
         </ion-card-content>
