--- a/src/pages/sm-edit-order/sm-edit-order.html
+++ b/src/pages/sm-edit-order/sm-edit-order.html
@@ -30,7 +30,7 @@
           </ion-col>
           <ion-col col-12>
             <strong>
-              <ion-icon name="cog"></ion-icon> Weight Total: {{ orderDetail.totalNetWeight}} tonnage
+              <ion-icon name="cog"></ion-icon> Weight Total: {{ orderDetail.totalNetWeight | number: '.2-2'}} tonnage
             </strong>
           </ion-col>
           <!-- <ion-col col-12>
@@ -78,7 +78,7 @@
         <ion-row>
           <ion-col text-center *ngIf="product.netWeight">
             <ion-icon name="cog" color="grey"></ion-icon>
-            Net Weight: <span>{{product.netWeight.toFixed(2)}}</span> Kg
+            Net Weight: <span>{{product.netWeight | number: '.2-2'}}</span> Kg
           </ion-col>
         </ion-row>        
         <ion-row>
