--- a/src/pages/tk-products-list/tk-products-list.html
+++ b/src/pages/tk-products-list/tk-products-list.html
@@ -1,216 +1,40 @@
-<!--
-  Generated template for the TkProductsListPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>TK Products</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="openAddTkProductModal()">
-        <ion-icon name="add"></ion-icon>
-      </button>
-      <button ion-button icon-only (click)="showRadioAlert()">
-        <ion-icon name="funnel"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
-  <ion-searchbar (ionInput)="searchItems($event)"></ion-searchbar>
-
+  <ion-toolbar>
+    <ion-searchbar (ionChange)="searchProducts(q.value)" placeholder="Search TK Products" #q></ion-searchbar>
+  </ion-toolbar>
 </ion-header>
-
-
-<ion-content class="tk-product-container" no-padding>
-  <!-- <ion-searchbar (ionInput)="searchItems($event)"></ion-searchbar> -->
-  <!-- <ion-list [virtualScroll]="tkProductArray" [approxItemHeight]="'250px'" no-lines #row> -->
-  <!-- <form [formGroup]="inputForm"> -->
-
-<!-- <button class="accordion" (click)="toggleAcoordion(1)">Section 1</button>
-<div class="panel" [ngClass]="isExpanded ? 'expanded' : 'collapsed'" id="1">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-
-<button class="accordion" (click)="toggleAcoordion(2)">Section 2</button>
-<div class="panel" [ngClass]="isExpanded ? 'expanded' : 'collapsed'" id="2">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div> -->
-
-  <virtual-scroller #scroll [items]="tkProductArray" [enableUnequalChildrenSizes]="true" [bufferAmount]=10>
-    <ion-list *ngFor="let product of scroll.viewPortItems; let j = index;" no-lines>
-      <!-- <div class="tk-item-wrapper" *virtualItem="let product;let j = index" text-wrap> -->
-      <div class="tk-item-wrapper" text-wrap>
-        <ion-grid
-          [ngClass]="markRowAsCaptured(product['Product Catagory'], product['Master Code'], product['Product Code']) ? 'main-grid highlight' : 'main-grid'"
-          (click)="toggleAcoordion(product['uniqueId'])">
-          <ion-row>
-            <ion-col col-11>
-              <ion-icon name="cube" color="grey"></ion-icon>
-              <span class="product-name">
-                {{ product['Product Name'] }}
-              </span>
-            </ion-col>
-            <ion-col col-1>
-              <!-- <ion-icon name="add" color="grey"></ion-icon> -->
-              <ion-icon name="ios-arrow-down" color="grey"></ion-icon>
-            </ion-col>
-          </ion-row>
-          <!-- <ion-row>
-              <ion-col col-12>Product Code: 
-                <span>
-                  {{ product['Product Code'] }}
-                </span>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col col-12>Brand: 
-                <span>
-                  {{ product['BRAND'] }}
-                </span>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col col-12>Master Name: 
-                <span>
-                  {{ product['Master Name'] }}
-                </span>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col col-12>Master Code: 
-                <span>
-                  {{ product['Master Code'] }}
-                </span>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col col-12>Category: 
-                <span>
-                  {{ product['Product Catagory'] }}
-                </span>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col col-12>SubCategory: 
-                <span>
-                  {{ product['Sub Catagory'] }}
-                </span>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col col-6>Case Size: 
-                <span>
-                  {{ product['Case Size'] }}
-                </span>
-              </ion-col>
-              <ion-col col-6>Unit Size: 
-                <span>
-                  {{ product['Unit Size'] }}
-                </span>
-              </ion-col>
-            </ion-row> -->
-
-          <!-- Competitive Section Begins -->
-          <!-- <div [formGroupName]="j">
-              <div class="competitive-section">
-                <p class="title">Competitive Products</p>
-                <ion-row>
-                  <ion-col col-6>
-                    <ion-label>
-                      [TK] {{ product['Product Name'] }}
-                    </ion-label>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="text" placeholder="MSQ" formControlName="inputA"></ion-input>
-                    </ion-item>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="number" placeholder="RRP" formControlName="inputB"></ion-input>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-                <ion-row *ngFor="let item of product['Competitive Product']; let i = index;" formGroupName="compInputs">
-                  <ion-col col-6>
-                    <ion-label>
-                      {{ item['Product Name'] }}
-                    </ion-label>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="text" placeholder="MSQ" [formControlName]="i+'A'"></ion-input>
-                    </ion-item>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="number" placeholder="RRP" [formControlName]="i+'B'"></ion-input>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-              </div>
-
-              <div class="item-action-wrapper">
-                <button ion-button small color="secondary" class="cust-btn"
-                  [disabled]="tkProductArray.length > 0 ? inputForm.controls[j].invalid : true"
-                  (click)="saveToServer(j)">Upload</button>
-                <button ion-button small color="secondary" class="cust-btn"
-                  (click)="openAddCompetitiveProductModal(product['Master Code'])">Add New</button>
-              </div>
-            </div> -->
-          <div #accordionDiv class="panel" [ngClass]="toggledElementId===product['uniqueId'] && isExpanded ? 'expanded' : 'collapsed'" 
-              id="{{product['uniqueId']}}">
-          <!-- <div #accordionDiv class="panel" [ngClass]="toggledElementId===j && isExpanded ? 'expanded' : 'collapsed'" id={{j}}> -->
-          <form #form="ngForm">
-              <div class="competitive-section">
-                <p class="title">Competitive Products</p>
-                <ion-row>
-                  <ion-col col-6>
-                    <ion-label>
-                      {{ product['Product Name'] }}
-                    </ion-label>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="text" name="A" placeholder="MSQ" ngModel required></ion-input>
-                    </ion-item>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="number" name="B" placeholder="RRP"  ngModel required></ion-input>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-                <ion-row *ngFor="let item of product['Competitive Product']; let i = index;">
-                  <ion-col col-6>
-                    <ion-label>
-                      {{ item['Product Name'] }}
-                    </ion-label>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="text" [name]="i + 'A'" placeholder="MSQ"  ngModel required></ion-input>
-                    </ion-item>
-                  </ion-col>
-                  <ion-col col-3>
-                    <ion-item>
-                      <ion-input type="number" [name]="i + 'B'" placeholder="RRP"  ngModel required></ion-input>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-              </div>
-
-              <div class="item-action-wrapper">
-                <button ion-button small color="secondary" class="cust-btn" [disabled]="form.invalid" (click)="saveToServer(product['Master Code'], product['Product Code'], product['Product Catagory'], form)">Upload</button>
-                <button ion-button small color="secondary" class="cust-btn"
-                  (click)="openAddCompetitiveProductModal(product['Master Code'])">Add New</button>
-              </div>
-            </form>
-          </div>
-
-        </ion-grid>
-      </div>
-    </ion-list>
-  </virtual-scroller>
-  <!-- </form> -->
+<ion-content class="full-background">
+  <div class="search-spinner">
+    <ion-spinner name="crescent" *ngIf="!productListAvailable"></ion-spinner>
+  </div>
+  <!-- <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher> -->
+  <ion-list *ngIf="productListAvailable &&  (filteredProductList.length > 0); else norecord">
+    <ion-card *ngFor="let product of filteredProductList">
+      <ion-card-content>
+        <ion-row (click)="openAddcompMpdal(product)">
+          <ion-col col-2>
+            <ion-icon name="cube" color="grey"></ion-icon>
+          </ion-col>
+          <ion-col col-10>
+            <span>{{product.productName}}</span>
+          </ion-col>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+    <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll> -->
+  </ion-list>
+  <ng-template #norecord>
+    <ion-card>
+      <ion-card-header text-center>
+        <h4>No record found</h4>
+      </ion-card-header>
+    </ion-card>
+  </ng-template>
 </ion-content>
