--- a/src/pages/oracle-connect/oracle-connect.html
+++ b/src/pages/oracle-connect/oracle-connect.html
@@ -48,6 +48,9 @@
     <button full large text-wrap ion-button (click)="createCustomerStatements()">Create Customer Statements</button>
   </ion-item>
   <ion-item>
+    <button full large text-wrap ion-button (click)="createCustomerPendingInvoice()">Create Customer Pending Invoice</button>
+  </ion-item>
+  <ion-item>
       <button class="erp-action-btn" full large text-wrap ion-button (click)="storeInProgressOrderInErp()">Store In-Progress Order</button>
     </ion-item>
   <ion-item>
