--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -71,6 +71,44 @@
         </p>
       </ion-col>
     </ion-row>
+    <!-- <div *ngIf="customerDashboard==false">
+      <ion-row>
+        <ion-col class="tabs">
+          <p class="tab-label-sm">
+            LMTD Achieved
+          </p>
+          <p class="tab-label-lg">
+            {{data.lmtdAchieve}}
+          </p>
+        </ion-col>
+        <ion-col class="tabs">
+          <p class="tab-label-sm">
+            % Growth over LMTD
+          </p>
+          <p class="tab-label-lg">
+            {{data.lmtdGrowthPercentage}}%
+          </p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="tabs">
+          <p class="tab-label-sm">
+            LYMTD Achieved
+          </p>
+          <p class="tab-label-lg">
+            {{data.lymtdAchieve}}
+          </p>
+        </ion-col>
+        <ion-col class="tabs">
+          <p class="tab-label-sm">
+            % Growth over LYMTD
+          </p>
+          <p class="tab-label-lg">
+            {{data.lymtdGrowthPercentage}}%
+          </p>
+        </ion-col>
+      </ion-row>
+    </div> -->
 
     <div>
       <ion-row>
@@ -100,7 +138,7 @@
           Total Credit Limit
         </p>
         <p class="tab-label-lg">
-          {{data.creditLimit | number: '.2'}}
+          {{data.creditLimit !== 'NA' ? (data.creditLimit | number: '.2') : data.creditLimit}}
         </p>
       </ion-col>
       <ion-col class="tabs">
@@ -108,7 +146,7 @@
           Total Outstanding
         </p>
         <p class="tab-label-lg">
-          {{data.currentOutStanding | number: '.2'}}
+          {{data.currentOutStanding !== 'NA' ? (data.currentOutStanding | number: '.2') : data.currentOutStanding}}
         </p>
       </ion-col>
     </ion-row>
@@ -119,7 +157,7 @@
           > 30- Days Outstanding
         </p>
         <p class="tab-label-lg">
-          {{data.thirtyDaysOutStanding | number: '.2'}}
+          {{data.thirtyDaysOutStanding !== 'NA' ? (data.thirtyDaysOutStanding | number: '.2') : data.thirtyDaysOutStanding }}
         </p>
       </ion-col>
       <ion-col class="tabs">
@@ -127,7 +165,7 @@
           Available Credit Limit
         </p>
         <p class="tab-label-lg">
-          {{data.availableCreditLimit | number: '.2'}}
+          {{data.availableCreditLimit !== 'NA' ? (data.availableCreditLimit | number: '.2') : data.availableCreditLimit}}
         </p>
       </ion-col>
     </ion-row>
@@ -165,10 +203,12 @@
 
 </ion-content>
 <ion-footer>
-  <button ion-button padding class="customerdashboardBtn btn-left" (click)="openPaymentModal()">
+  <button ion-button padding class="customerdashboardBtn btn-left" (click)="openPaymentModal()"
+      [ngClass]=" customerDashboard ? 'item-hidden': 'item-visible'">
     <ion-icon name="cash"></ion-icon>Add Payment
   </button>
-  <button ion-button padding class="customerdashboardBtn" (click)="openShopPage()">
+  <button ion-button padding class="customerdashboardBtn" (click)="openShopPage()"
+    [ngClass]=" customerDashboard ? 'item-hidden': 'item-visible'">
     <ion-icon name="cart"></ion-icon>Place Order
   </button>
 </ion-footer>
